change jura grid

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_globals.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_globals.scss
@@ -135,3 +135,9 @@ iframe[name='google_conversion_frame'] {
   -o-transition: all 0.4s ease;
   transition: all 0.4s ease;
 }
+
+.categorypath-hersteller-jura {
+  h1, h2, h3, h4, h5, h6, p.h1, p.h2, p.h3, p.h4, p.h5, p.h6 {
+    text-align: left;
+  }
+}
