--- a/app/design/frontend/foundation/default/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/view/media.phtml
@@ -76,7 +76,7 @@ $_helper = $this->helper('catalog/output');
                     margin:10,
                     items: 5,
                     lazyLoad: true,
-                    loop: true,
+                    loop: false,
                     nav: true,
                     navText: ['<i class="fa fa-chevron-left" aria-hidden="true"></i>', '<i class="fa fa-chevron-right" aria-hidden="true"></i>'],
                     dots: false,
