--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -65,7 +65,7 @@
             </ul>
         </div>
         <div class="hotline">
-            <a href="tel:+498004566000">0800 456 6000 <span>Bestell- und Beratungshotline</span></a>
+            <a href="tel:+498004566000"><i class="fas fa-phone"></i> 0800 456 6000 <span>Bestell- und Beratungshotline</span></a>
         </div>
     </div>
     <div class="header-bottom">
