--- a/app/design/frontend/foundation/default/template/catalog/product/list_without_toolbar.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list_without_toolbar.phtml
@@ -11,7 +11,7 @@
  *
  */
 
-function clean($string)
+function clean_list_without_toolbar($string)
 {
 
     $string = str_replace(' ', '-', $string); // Replaces all spaces with hyphens.
@@ -132,7 +132,7 @@ $_helper = $this->helper('catalog/output');
                         <?php if ($_product->getAttributeText('manufacturer')): ?>
                             <?php $brand = $_product->getAttributeText('manufacturer') ?>
                             <div class="product-brand">
-                                <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA); ?>catalog/brands/<?php echo clean($brand) ?>.png"
+                                <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA); ?>catalog/brands/<?php echo clean_list_without_toolbar($brand) ?>.png"
                                      alt="<?php echo $brand ?> Logo">
                             </div>
                         <?php endif; ?>
