--- a/app/design/frontend/foundation/default/template/catalog/product/list_without_toolbar.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list_without_toolbar.phtml
@@ -10,35 +10,35 @@
  * @file list_without_toolbar.phtml
  *
  */
-
-function clean_list_without_toolbar($string)
-{
-
-    $string = str_replace(' ', '-', $string); // Replaces all spaces with hyphens.
+if (!function_exists('clean_list_without_toolbar')) {
+    function clean_list_without_toolbar($string)
+    {
+        $string = str_replace(' ', '-', $string); // Replaces all spaces with hyphens.
 //$string = preg_replace('/[^A-Za-z0-9\-]/', '', $string); // Removes special chars.
-    $string = strtolower($string);
-    $utf8 = array(
-        '/[áàâãªä]/u' => 'a',
-        '/[ÁÀÂÃÄ]/u' => 'A',
-        '/[ÍÌÎÏ]/u' => 'I',
-        '/[íìîï]/u' => 'i',
-        '/[éèêë]/u' => 'e',
-        '/[ÉÈÊË]/u' => 'E',
-        '/[óòôõºö]/u' => 'o',
-        '/[ÓÒÔÕÖ]/u' => 'O',
-        '/[úùûü]/u' => 'u',
-        '/[ÚÙÛÜ]/u' => 'U',
-        '/ç/' => 'c',
-        '/Ç/' => 'C',
-        '/ñ/' => 'n',
-        '/Ñ/' => 'N',
-        '/–/' => '-', // UTF-8 hyphen to "normal" hyphen
-        '/[’‘‹›‚]/u' => ' ', // Literally a single quote
-        '/[“”«»„]/u' => ' ', // Double quote
-        '/ /' => ' ', // nonbreaking space (equiv. to 0x160)
-    );
+        $string = strtolower($string);
+        $utf8 = array(
+            '/[áàâãªä]/u' => 'a',
+            '/[ÁÀÂÃÄ]/u' => 'A',
+            '/[ÍÌÎÏ]/u' => 'I',
+            '/[íìîï]/u' => 'i',
+            '/[éèêë]/u' => 'e',
+            '/[ÉÈÊË]/u' => 'E',
+            '/[óòôõºö]/u' => 'o',
+            '/[ÓÒÔÕÖ]/u' => 'O',
+            '/[úùûü]/u' => 'u',
+            '/[ÚÙÛÜ]/u' => 'U',
+            '/ç/' => 'c',
+            '/Ç/' => 'C',
+            '/ñ/' => 'n',
+            '/Ñ/' => 'N',
+            '/–/' => '-', // UTF-8 hyphen to "normal" hyphen
+            '/[’‘‹›‚]/u' => ' ', // Literally a single quote
+            '/[“”«»„]/u' => ' ', // Double quote
+            '/ /' => ' ', // nonbreaking space (equiv. to 0x160)
+        );
 
-    return preg_replace(array_keys($utf8), array_values($utf8), $string); // Replaces multiple hyphens with single one.
+        return preg_replace(array_keys($utf8), array_values($utf8), $string); // Replaces multiple hyphens with single one.
+    }
 }
 
 ?>
